--- a/produkt.html
+++ b/produkt.html
@@ -11,6 +11,13 @@
         <title>ProSko Nettbutikk</title>
     </head>
     <body>
+        <nav class="shipping">
+            <ul class="shipping-info">
+                <li><a href="#">30 days return policy</a></li>
+                <li><a href="#">Free Shipping over $100</a></li>
+                <li><a href="#">Home delivery in 2-6 days</a></li>
+            </ul>
+        </nav> 
         <div id="grid-container">
             <header>            
                 <nav>
