--- a/index.html
+++ b/index.html
@@ -82,24 +82,28 @@
                         <h3>Black Velvet</h3>
                         <p>Elegant and comfy women shoes</p>
                         <p class="price">$39.99</p>
+                        <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
                         <a href="produkt.html"><img src="img/shoe-629643_640.jpg" alt="Product image of sports shoes"></a>
                         <h3>Merindo green</h3>
                         <p>Bouncy running shoes</p>
                         <p class="price">$29.99</p>
+                        <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
                         <a href="produkt.html"><img src="img/childrens-shoes-3104832_640.jpg" alt="Product image of Black women shoes"></a>
                         <h3>Pink label</h3>
                         <p>Casual children shoes</p>
                         <p class="price">$20.99</p>
+                        <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
                         <a href="produkt.html"><img src="img/shoe-1768809_640.jpg" alt="Product image of sports shoes"></a>
                         <h3>Converse</h3>
                         <p>Used Converse shoes</p>
                         <p class="price">$9.99</p>
+                        <a href="#">Add to cart</a>
                     </article>
                 </section>
             </main>
