--- a/produkt.html
+++ b/produkt.html
@@ -47,8 +47,9 @@
                 <h1 class="all-products">All Products</h1>
                 <p class="p-information">ProSko offers a wide range of different shoes for every occasion. We have sports wear, dancing shoes, shoes for kids, men and women. We also offer pre used shoes for a low price.</p>
                 <article class="square-container">
-                    <a href="#" class="square-button">Filter</a>
-                    <a href="#" class="square-button">New</a>
+                    <a href="#" class="square-button">Colour</a>
+                    <a href="#" class="square-button">Size</a>
+                    <a href="#" class="square-button">Brand</a>
                 </article>
             </header>
             <main>
@@ -58,96 +59,140 @@
                         <h3>Black Velvet</h3>
                         <p>Elegant and comfy women shoes</p>
                         <p class="price">$39.99</p>
+                        <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
                         <a href="produkt.html"><img src="img/shoe-629643_640.jpg" alt="Product image of sports shoes"></a>
                         <h3>Merindo Green</h3>
                         <p>Bouncy running shoes</p>
                         <p class="price">$29.99</p>
+                        <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
                         <a href="produkt.html"><img src="img/childrens-shoes-3104832_640.jpg" alt="Product image of Black women shoes"></a>
                         <h3>Pink label</h3>
                         <p>Casual children shoes</p>
                         <p class="price">$20.99</p>
+                        <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
                         <a href="produkt.html"><img src="img/shoe-1768809_640.jpg" alt="Product image of sports shoes"></a>
                         <h3>Converse</h3>
                         <p>Used Converse shoes</p>
                         <p class="price">$9.99</p>
+                        <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
                         <a href="produkt.html"><img src="img/pink-shoes-589193_640.jpg" alt="Product image of Black women shoes"></a>
                         <h3>Pink Edge</h3>
                         <p>Trendy shoes</p>
                         <p class="price">$39.99</p>
+                        <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
                         <a href="produkt.html"><img src="img/womens-shoes-178163_640.jpg" alt="Product image of sports shoes"></a>
                         <h3>Gold Cat</h3>
                         <p>Party shoes deluxe</p>
                         <p class="price">$35.99</p>
+                        <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
                         <a href="produkt.html"><img src="img/running-shoe-371624_640.jpg" alt="Product image of Black women shoes"></a>
                         <h3>Running Wild</h3>
                         <p>Comfy running shoes</p>
                         <p class="price">$25.99</p>
+                        <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
                         <a href="produkt.html"><img src="img/black-shoes-589195_640.jpg" alt="Product image of sports shoes"></a>
                         <h3>Black Gang</h3>
                         <p>Dancing shoes</p>
                         <p class="price">$29.99</p>
+                        <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
                         <a href="produkt.html"><img src="img/shoe-506826_640.jpg" alt="Product image of Black women shoes"></a>
                         <h3>Black Velvet</h3>
                         <p>Elegant and comfy women shoes</p>
                         <p class="price">$39.99</p>
+                        <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
                         <a href="produkt.html"><img src="img/shoe-629643_640.jpg" alt="Product image of sports shoes"></a>
                         <h3>Merindo Green</h3>
                         <p>Bouncy running shoes</p>
                         <p class="price">$29.99</p>
+                        <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
                         <a href="produkt.html"><img src="img/childrens-shoes-3104832_640.jpg" alt="Product image of Black women shoes"></a>
                         <h3>Pink label</h3>
                         <p>Casual children shoes</p>
                         <p class="price">$20.99</p>
+                        <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
                         <a href="produkt.html"><img src="img/shoe-1768809_640.jpg" alt="Product image of sports shoes"></a>
                         <h3>Converse</h3>
                         <p>Used Converse shoes</p>
                         <p class="price">$9.99</p>
+                        <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
                         <a href="produkt.html"><img src="img/pink-shoes-589193_640.jpg" alt="Product image of Black women shoes"></a>
                         <h3>Pink Edge</h3>
                         <p>Trendy shoes</p>
                         <p class="price">$39.99</p>
+                        <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
                         <a href="produkt.html"><img src="img/womens-shoes-178163_640.jpg" alt="Product image of sports shoes"></a>
                         <h3>Gold Cat</h3>
                         <p>Party shoes deluxe</p>
                         <p class="price">$35.99</p>
+                        <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
                         <a href="produkt.html"><img src="img/running-shoe-371624_640.jpg" alt="Product image of Black women shoes"></a>
                         <h3>Running Wild</h3>
                         <p>Comfy running shoes</p>
                         <p class="price">$25.99</p>
+                        <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
                         <a href="produkt.html"><img src="img/black-shoes-589195_640.jpg" alt="Product image of sports shoes"></a>
                         <h3>Black Gang</h3>
                         <p>Dancing shoes</p>
                         <p class="price">$29.99</p>
+                        <a href="#">Add to cart</a>
+                    </article>
+                    <article class="product-card">
+                        <a href="produkt.html"><img src="img/shoe-506826_640.jpg" alt="Product image of Black women shoes"></a>
+                        <h3>Black Velvet</h3>
+                        <p>Elegant and comfy women shoes</p>
+                        <p class="price">$39.99</p>
+                        <a href="#">Add to cart</a>
+                    </article>
+                    <article class="product-card">
+                        <a href="produkt.html"><img src="img/shoe-629643_640.jpg" alt="Product image of sports shoes"></a>
+                        <h3>Merindo Green</h3>
+                        <p>Bouncy running shoes</p>
+                        <p class="price">$29.99</p>
+                        <a href="#">Add to cart</a>
+                    </article>
+                    <article class="product-card">
+                        <a href="produkt.html"><img src="img/childrens-shoes-3104832_640.jpg" alt="Product image of Black women shoes"></a>
+                        <h3>Pink label</h3>
+                        <p>Casual children shoes</p>
+                        <p class="price">$20.99</p>
+                        <a href="#">Add to cart</a>
+                    </article>
+                    <article class="product-card">
+                        <a href="produkt.html"><img src="img/shoe-1768809_640.jpg" alt="Product image of sports shoes"></a>
+                        <h3>Converse</h3>
+                        <p>Used Converse shoes</p>
+                        <p class="price">$9.99</p>
+                        <a href="#">Add to cart</a>
                     </article>
                 </section>
                 <aside class="more-container">
