--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </nav>
                 <section>
                     <img class="header-image" src="img/alexis-chloe-FcgxMCkjwEo-unsplash.jpg" alt="Image of a woman sitting on the ground with her legs crossed">
-                    <span class="header-text">Welcome to ProSko</span>
+                    <h3 class="header-text">Welcome to ProSko</h3>
                     <a href="produkt.html" class="header-button">See our products &rarr;</a>
                 </section>
             </header>
