--- a/login.html
+++ b/login.html
@@ -44,19 +44,19 @@
                         <h1 class="h1-sign-in">Sign in</h1>
                         <p>New customer? <a class="underline" href="#">Create Account</a></p>
                         <label for="Email">Email*</label>
-                        <input type="text" placeholder="Email" name="Email" required>
+                        <input type="text" id="Email" placeholder="Email" name="Email" required>
                         <label for="Password">Password*</label>
-                        <input type="password" placeholder="Password" name="Password" required>
+                        <input type="password" id="Password" placeholder="Password" name="Password" required>
                         <button type="submit">Login</button>
                         <p><a class="forgot-password" href="#">Forgot password?</a></p>
                         <p class="align-center">Or log in with</p>
                     </form>
                 </section>
-                <section class="login-icons">
+                <aside class="login-icons">
                     <i class="fa-brands fa-facebook fa-2xl" style="color: #000000;"></i>
                     <i class="fa-brands fa-google fa-2xl" style="color: #000000;"></i>
-                </section>
-                <article class="membership-container">
+                </aside>
+                <div class="membership-container">
                     <section class="membership-benefits">
                         <h2 class="h2-membership">Membership benefits</h2>
                         <ul class="ul-benefits">
@@ -68,7 +68,7 @@
                             <li><a href="#">Online courses</a></li>
                         </ul>
                     </section>
-                </article>
+                </div>
             </main>
             <footer>
                 <div class="flex-container">
