--- a/produkt.html
+++ b/produkt.html
@@ -46,14 +46,15 @@
                 </ul>
                 <h1 class="all-products">All Products</h1>
                 <p class="p-information">ProSko offers a wide range of different shoes for every occasion. We have sports wear, dancing shoes, shoes for kids, men and women. We also offer pre used shoes for a low price.</p>
-                <article class="square-container">
+                <aside class="square-container">
                     <a href="#" class="square-button">Colour</a>
                     <a href="#" class="square-button">Size</a>
                     <a href="#" class="square-button">Brand</a>
-                </article>
+                </aside>
             </header>
             <main>
                 <section class="products">
+                    <h2 class="h2-products">Product list:</h2>
                     <article class="product-card">
                         <a href="produkt.html"><img src="img/shoe-506826_640.jpg" alt="Product image of Black women shoes"></a>
                         <h3>Black Velvet</h3>
@@ -202,7 +203,7 @@
             <footer>
                 <div class="flex-container">
                     <section class="footer-information">
-                        <h1>Prosko</h1>
+                        <h2>Prosko</h2>
                         <p>Welcome to our online store! ProSko is an e-commerce platform that specializes in footwear for people of all ages. Our mission is to offer a pair of shoes for every individual. We provide a diverse range of options, from premium brands like Bugatti and Timberland to more budget-friendly choices such as Adidas and Nike. Our selection is continually expanding, with new products being added regularly.</p>
                         <p>In partnership with environmental organizations, we sell both new and used shoes to reduce our environmental footprint. Additionally, we package all our shoes in eco-friendly materials. At ProSko, we offer free shipping on orders over $100 and have a hassle-free return policy in case you're not satisfied with your purchase. Thank you for choosing ProSko for all your footwear needs!</p>
                     </section>
