Added source front page

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     </ul>
                 </nav>
                     <img class="header-image" src="img/alexis-chloe-FcgxMCkjwEo-unsplash.jpg" alt="Image of a woman sitting on the ground with her legs crossed">
+                    <!-- https://unsplash.com/photos/FcgxMCkjwEo -->
             </header>
             <main>
                 <section>
@@ -46,31 +47,35 @@
                         <article>
                             <h2><a href="produkt.html">Women</a></h2>
                             <img class="women-img" src="img/franco-figueroa-bHrnn1h_5YY-unsplash.jpg" alt="Image category for women">
+                            <!-- https://unsplash.com/photos/woman-looking-down-bHrnn1h_5YY -->
                         </article>
                         <article>
                             <h2><a href="produkt.html">Men</a></h2>
                             <img class="man-img" src="img/wieger-stienstra-t2LACMcVNgA-unsplash.jpg" alt="Image category for men">
+                            <!-- https://unsplash.com/photos/woman-in-blue-denim-jeans-and-black-leather-jacket-standing-beside-white-wall-during-daytime-t2LACMcVNgA -->
                         </article>
                     </aside>
                         <article>
                             <h2><a href="produkt.html">Children</a></h2>
                             <img class="child-img" src="img/chris-hardy-1JHDnBniINE-unsplash.jpg" alt="Image category for kids">
+                            <!-- https://unsplash.com/photos/boy-in-blue-jacket-and-red-pants-jumping-on-brown-field-during-daytime-1JHDnBniINE -->
                         </article>
                 </section>
                 <section>
                     <h3 class="h3-brands">Brands</h3>
                     <ul class="brands">
-                        <li><img src="img/adidas-311450_640.jpg" alt="Brand image"></li>
-                        <li><img src="img/animal-2028258_640.jpg" alt="Brand image"></li>
-                        <li><img src="img/black-307583_640.jpg" alt="Brand image"></li>
-                        <li><img src="img/fire-303309_640.jpg" alt="Brand Image"></li>
-                        <li><img src="img/silhouette-3313481_640.jpg" alt="Brand Image"></li>
+                        <li><img src="img/adidas-311450_640.jpg" alt="Adidas brand image"></li> <!-- https://pixabay.com/no/vectors/adidas-selskap-symbol-ikon-sko-311450/ -->
+                        <li><img src="img/animal-2028258_640.jpg" alt="Brand image of animal"></li> <!-- https://pixabay.com/no/vectors/dyr-ansikt-logo-vaskebj%C3%B8rn-ond-2028258/ -->
+                        <li><img src="img/black-307583_640.jpg" alt="Brand image"></li> <!-- https://pixabay.com/no/vectors/svart-sko-converse-ikke-sant-307583/ -->
+                        <li><img src="img/fire-303309_640.jpg" alt="Brand Image"></li> <!-- https://pixabay.com/no/vectors/brann-flamme-svart-sirkel-logo-303309/ -->
+                        <li><img src="img/silhouette-3313481_640.jpg" alt="Brand Image"></li> <!-- https://pixabay.com/no/vectors/silhuett-blekksprut-vektor-grafikk-3313481/ -->
                     </ul>
                 </section>
                 <section class="products">
                     <h2 class="h2-products">Products</h2>
                     <article class="product-card">
                         <a href="produkt.html"><img src="img/shoe-506826_640.jpg" alt="Product image of Black women shoes"></a>
+                        <!-- https://pixabay.com/no/photos/sko-h%C3%A6l-mote-bootee-506826/ -->
                         <h3>Black Velvet</h3>
                         <p>Elegant and comfy women shoes</p>
                         <p class="price">$39.99</p>
@@ -78,20 +83,23 @@
                     </article>
                     <article class="product-card">
                         <a href="produkt.html"><img src="img/shoe-629643_640.jpg" alt="Product image of sports shoes"></a>
+                        <!-- https://pixabay.com/no/photos/sko-sportssko-l%C3%B8ype-sport-l%C3%B8ping-629643/ -->
                         <h3>Merindo green</h3>
                         <p>Bouncy running shoes</p>
                         <p class="price">$29.99</p>
                         <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
-                        <a href="produkt.html"><img src="img/childrens-shoes-3104832_640.jpg" alt="Product image of Black women shoes"></a>
+                        <a href="produkt.html"><img src="img/childrens-shoes-3104832_640.jpg" alt="Product image of children shoes"></a>
+                        <!-- https://pixabay.com/no/photos/barnesko-materiale-liten-sko-3104832/ -->
                         <h3>Pink label</h3>
                         <p>Casual children shoes</p>
                         <p class="price">$20.99</p>
                         <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
-                        <a href="produkt.html"><img src="img/shoe-1768809_640.jpg" alt="Product image of sports shoes"></a>
+                        <a href="produkt.html"><img src="img/shoe-1768809_640.jpg" alt="Product image of used converse shoes"></a>
+                        <!-- https://pixabay.com/no/photos/sko-gammel-gamle-sko-brukt-1768809/ -->
                         <h3>Converse</h3>
                         <p>Used Converse shoes</p>
                         <p class="price">$9.99</p>
