--- a/produkt.html
+++ b/produkt.html
@@ -57,6 +57,7 @@
                     <h2 class="h2-products">Product list:</h2>
                     <article class="product-card">
                         <a href="produkt.html"><img src="img/shoe-506826_640.jpg" alt="Product image of Black women shoes"></a>
+                        <!-- Dette er en HTML-kommentar. -->
                         <h3>Black Velvet</h3>
                         <p>Elegant and comfy women shoes</p>
                         <p class="price">$39.99</p>
@@ -64,48 +65,55 @@
                     </article>
                     <article class="product-card">
                         <a href="produkt.html"><img src="img/shoe-629643_640.jpg" alt="Product image of sports shoes"></a>
+                        <!-- Dette er en HTML-kommentar. -->
                         <h3>Merindo Green</h3>
                         <p>Bouncy running shoes</p>
                         <p class="price">$29.99</p>
                         <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
-                        <a href="produkt.html"><img src="img/childrens-shoes-3104832_640.jpg" alt="Product image of Black women shoes"></a>
+                        <a href="produkt.html"><img src="img/childrens-shoes-3104832_640.jpg" alt="Product image of pink child shoes"></a>
+                        <!-- Dette er en HTML-kommentar. -->
                         <h3>Pink label</h3>
                         <p>Casual children shoes</p>
                         <p class="price">$20.99</p>
                         <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
-                        <a href="produkt.html"><img src="img/shoe-1768809_640.jpg" alt="Product image of sports shoes"></a>
+                        <a href="produkt.html"><img src="img/shoe-1768809_640.jpg" alt="Product image of used converse shoes"></a>
+                        <!-- Dette er en HTML-kommentar. -->
                         <h3>Converse</h3>
                         <p>Used Converse shoes</p>
                         <p class="price">$9.99</p>
                         <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
-                        <a href="produkt.html"><img src="img/pink-shoes-589193_640.jpg" alt="Product image of Black women shoes"></a>
+                        <a href="produkt.html"><img src="img/pink-shoes-589193_640.jpg" alt="Product image of trendy pink shoes"></a>
+                        <!-- Dette er en HTML-kommentar. -->
                         <h3>Pink Edge</h3>
                         <p>Trendy shoes</p>
                         <p class="price">$39.99</p>
                         <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
-                        <a href="produkt.html"><img src="img/womens-shoes-178163_640.jpg" alt="Product image of sports shoes"></a>
+                        <a href="produkt.html"><img src="img/womens-shoes-178163_640.jpg" alt="Product image of female party shoes"></a>
+                        <!-- Dette er en HTML-kommentar. -->
                         <h3>Gold Cat</h3>
                         <p>Party shoes deluxe</p>
                         <p class="price">$35.99</p>
                         <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
-                        <a href="produkt.html"><img src="img/running-shoe-371624_640.jpg" alt="Product image of Black women shoes"></a>
+                        <a href="produkt.html"><img src="img/running-shoe-371624_640.jpg" alt="Product image of running shoes"></a>
+                        <!-- Dette er en HTML-kommentar. -->
                         <h3>Running Wild</h3>
                         <p>Comfy running shoes</p>
                         <p class="price">$25.99</p>
                         <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
-                        <a href="produkt.html"><img src="img/black-shoes-589195_640.jpg" alt="Product image of sports shoes"></a>
+                        <a href="produkt.html"><img src="img/black-shoes-589195_640.jpg" alt="Product image of black dancing shoes"></a>
+                        <!-- Dette er en HTML-kommentar. -->
                         <h3>Black Gang</h3>
                         <p>Dancing shoes</p>
                         <p class="price">$29.99</p>
@@ -113,6 +121,7 @@
                     </article>
                     <article class="product-card">
                         <a href="produkt.html"><img src="img/shoe-506826_640.jpg" alt="Product image of Black women shoes"></a>
+                        <!-- Dette er en HTML-kommentar. -->
                         <h3>Black Velvet</h3>
                         <p>Elegant and comfy women shoes</p>
                         <p class="price">$39.99</p>
@@ -120,48 +129,55 @@
                     </article>
                     <article class="product-card">
                         <a href="produkt.html"><img src="img/shoe-629643_640.jpg" alt="Product image of sports shoes"></a>
+                        <!-- Dette er en HTML-kommentar. -->
                         <h3>Merindo Green</h3>
                         <p>Bouncy running shoes</p>
                         <p class="price">$29.99</p>
                         <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
-                        <a href="produkt.html"><img src="img/childrens-shoes-3104832_640.jpg" alt="Product image of Black women shoes"></a>
+                        <a href="produkt.html"><img src="img/childrens-shoes-3104832_640.jpg" alt="Product image of pink child shoes"></a>
+                        <!-- Dette er en HTML-kommentar. -->
                         <h3>Pink label</h3>
                         <p>Casual children shoes</p>
                         <p class="price">$20.99</p>
                         <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
-                        <a href="produkt.html"><img src="img/shoe-1768809_640.jpg" alt="Product image of sports shoes"></a>
+                        <a href="produkt.html"><img src="img/shoe-1768809_640.jpg" alt="Product image of used converse"></a>
+                        <!-- Dette er en HTML-kommentar. -->
                         <h3>Converse</h3>
                         <p>Used Converse shoes</p>
                         <p class="price">$9.99</p>
                         <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
-                        <a href="produkt.html"><img src="img/pink-shoes-589193_640.jpg" alt="Product image of Black women shoes"></a>
+                        <a href="produkt.html"><img src="img/pink-shoes-589193_640.jpg" alt="Product image of trendy pink shoes"></a>
+                        <!-- Dette er en HTML-kommentar. -->
                         <h3>Pink Edge</h3>
                         <p>Trendy shoes</p>
                         <p class="price">$39.99</p>
                         <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
-                        <a href="produkt.html"><img src="img/womens-shoes-178163_640.jpg" alt="Product image of sports shoes"></a>
+                        <a href="produkt.html"><img src="img/womens-shoes-178163_640.jpg" alt="Product image of party shoes"></a>
+                        <!-- Dette er en HTML-kommentar. -->
                         <h3>Gold Cat</h3>
                         <p>Party shoes deluxe</p>
                         <p class="price">$35.99</p>
                         <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
-                        <a href="produkt.html"><img src="img/running-shoe-371624_640.jpg" alt="Product image of Black women shoes"></a>
+                        <a href="produkt.html"><img src="img/running-shoe-371624_640.jpg" alt="Product image of running shoes"></a>
+                        <!-- Dette er en HTML-kommentar. -->
                         <h3>Running Wild</h3>
                         <p>Comfy running shoes</p>
                         <p class="price">$25.99</p>
                         <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
-                        <a href="produkt.html"><img src="img/black-shoes-589195_640.jpg" alt="Product image of sports shoes"></a>
+                        <a href="produkt.html"><img src="img/black-shoes-589195_640.jpg" alt="Product image of black dancing shoes"></a>
+                        <!-- Dette er en HTML-kommentar. -->
                         <h3>Black Gang</h3>
                         <p>Dancing shoes</p>
                         <p class="price">$29.99</p>
@@ -169,6 +185,7 @@
                     </article>
                     <article class="product-card">
                         <a href="produkt.html"><img src="img/shoe-506826_640.jpg" alt="Product image of Black women shoes"></a>
+                        <!-- Dette er en HTML-kommentar. -->
                         <h3>Black Velvet</h3>
                         <p>Elegant and comfy women shoes</p>
                         <p class="price">$39.99</p>
@@ -176,20 +193,23 @@
                     </article>
                     <article class="product-card">
                         <a href="produkt.html"><img src="img/shoe-629643_640.jpg" alt="Product image of sports shoes"></a>
+                        <!-- Dette er en HTML-kommentar. -->
                         <h3>Merindo Green</h3>
                         <p>Bouncy running shoes</p>
                         <p class="price">$29.99</p>
                         <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
-                        <a href="produkt.html"><img src="img/childrens-shoes-3104832_640.jpg" alt="Product image of Black women shoes"></a>
+                        <a href="produkt.html"><img src="img/childrens-shoes-3104832_640.jpg" alt="Product image of pink child shoes"></a>
+                        <!-- Dette er en HTML-kommentar. -->
                         <h3>Pink label</h3>
                         <p>Casual children shoes</p>
                         <p class="price">$20.99</p>
                         <a href="#">Add to cart</a>
                     </article>
                     <article class="product-card">
-                        <a href="produkt.html"><img src="img/shoe-1768809_640.jpg" alt="Product image of sports shoes"></a>
+                        <a href="produkt.html"><img src="img/shoe-1768809_640.jpg" alt="Product image of used converse shoes"></a>
+                        <!-- Dette er en HTML-kommentar. -->
                         <h3>Converse</h3>
                         <p>Used Converse shoes</p>
                         <p class="price">$9.99</p>
